# remixflow

./: .dockerignore  .gitignore  BUILD_LOG.md  Dockerfile  Dockerfile.gpu  PRD.md  PRD_pt2.md  README.md  TODO.md  dev.sh  docker-compose.yml
backend/: README.md  pyproject.toml
backend/remixflow/: __init__.py  __main__.py  app.py  config.py  jobs.py  living.py  models.py  params.py  presets.py  server.py  service.py  store.py
backend/remixflow/audio/: __init__.py  analysis.py  io.py
backend/remixflow/generation/: __init__.py  acestep.py  base.py  dsp.py  registry.py  remote.py
backend/scripts/: build_ab_page.py  make_ab_excerpts.py  make_living.py  make_var50_full.py  make_var50_keepvocals.py  try_acestep.py
backend/tests/: test_pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ABPlayer.tsx  EvolutionTree.tsx  Library.tsx  LivingControls.tsx  LivingPlayer.tsx  SteeringControls.tsx  SteeringPanel.tsx
ios/: README.md
ios/App/: AudioEngine.swift  ContentView.swift  RemixFlowApp.swift
ios/RemixFlowKit/: Package.swift
mobile/mlx/: README.md
mobile/mlx/condenc/: condenc_mlx.py  condenc_numpy.py  export_reference.py
mobile/mlx/dit/: dit_mlx.py  dit_numpy.py  export_reference.py
mobile/mlx/flow/: sdedit.py
mobile/mlx/quantize/: README.md  audio_test.py  measure_quant.py  sweep_quant.py
mobile/mlx/textenc/: export_reference.py  qwen3_mlx.py  qwen3_numpy.py
mobile/mlx/vae/: _validate_mlx_layout.py  encoder_mlx.py  encoder_numpy.py  (+4 more)
(+9 files in other folders)
