[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remixflow"
version = "0.1.0"
description = "An AI-powered music evolution platform — generate endless familiar-but-fresh variations of a song."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RemixFlow" }]
keywords = ["music", "audio", "generation", "diffusion", "ai", "remix"]

# Core deps — all pip-installable from PyPI, no system packages required to boot.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "numpy>=1.24",
    "soundfile>=0.12",   # WAV/FLAC/OGG read/write via libsndfile (bundled wheels)
]

[project.optional-dependencies]
# Richer analysis + time-stretch/pitch-shift. librosa reaches MP3 via ffmpeg.
audio = ["librosa>=0.10"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
remixflow = "remixflow.__main__:main"

[project.urls]
Homepage = "https://github.com/fbobe321/remixflow"
Repository = "https://github.com/fbobe321/remixflow"

# The built React UI is emitted into remixflow/static (see frontend build) and is
# .gitignored (build output). `artifacts` forces it into the sdist/wheel anyway,
# so `pip install remixflow` serves the app with no Node.
[tool.hatch.build]
artifacts = ["remixflow/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["remixflow"]
artifacts = ["remixflow/static/**/*"]
